--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -76,41 +76,37 @@
                                 <ul class="navbar-nav me-auto mb-2 mb-lg-0  ">
                                     <li class="nav-item me-5">
                                         <a id="index" class="nav-link " aria-current="page" 
-                                        {# href="{{ path('home') }}"  #}
+                                        href="{{ path('home') }}" 
                                         > Accueil</a>
                                     </li>
                                     <li class="nav-item me-5">
                                         <a id="actu" class="nav-link" 
-                                        {# href="{{ path('actualites') }}" #}
+                                        href="{{ path('actualites') }}"
                                         >Actualités</a>
                                     </li>
                                     <li class="nav-item me-5">
                                         <a id="ecole" class="nav-link" 
-                                        {# href="{{ path('ecolealae') }}" #}
+                                        href="{{ path('ecole_alae') }}"
                                         >Ecole / ALAE</a>
                                     </li>
-                                    <li class="nav-item dropdown me-5">
-                                        <a id="doc" class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                            Infos Utiles
-                                        </a>
-                                        {# <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                            <li><a id="dochref"class="dropdown-item" href="{{ path('documents') }}">Documents</a></li>
-                                            <li><a class="dropdown-item" id="lienUtile" href="{{ path('liens') }}">Liens</a></li>
-                                        </ul> #}
+                                    <li class="nav-item me-5">
+                                        <a id="ecole" class="nav-link" 
+                                       href="{{ path('documents') }}"
+                                        >Documents</a>
                                     </li>
                                     <li class="nav-item me-5">
                                         <a id="parent" class="nav-link" 
-                                        {# href="{{ path('parents_delegues') }}" #}
+                                        href="{{ path('parents_delegues') }}"
                                         >Parents Délégués</a>
                                     </li>
                                     <li class="nav-item me-5">
                                         <a id="contact"class="nav-link" 
-                                        {# href="{{ path('contact') }}" #}
+                                        href="{{ path('contact') }}"
                                         >Contact</a>
                                     </li>
                                     <li class="nav-item me-5">
                                         <a class="nav-link " aria-current="page" 
-                                        {# href="{{ path('admin')}}" #}
+                                        href="{{ path('admin')}}"
                                         > <i class="bi bi-lock"></i></a>
                                     </li>
                                 </ul>
