--- a/templates/contact/index.html.twig
+++ b/templates/contact/index.html.twig
@@ -18,7 +18,7 @@
                     N’hésitez pas à nous contacter par mail pour toutes questions ou informations complémentaires. <br>
                     Afin de répondre au plus vite à votre demande merci d’indiquer : le nom / prénom de votre enfant ainsi que sa classe. <br> Merci
                     </p>
-                    <a href="mailto:sandrinekencker@hotmail.com" class="text-white p-2" >Contact</a>
+                    <a href="mailto:ape.stpierredelages@gmail.com" class="text-white p-2" >Contact</a>
                 </div>
                 <div class="col-lg-5 d-flex justify-content-center align-items-center img-contact">
                     <img class="img img-fluid  m-5 " src="{{ asset('assets/images/contact.jpg')}}" alt="">
