--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -45,7 +45,7 @@
                             {% else %}
                                 <div class='carousel-item data-interval="1000";'>
                             {% endif %}
-                            <img alt="image-ape" src="/uploads/images/{{ imagediapo.fichier }}" class="d-block w-75 img img-fluid ">  
+                            <img alt="image-ape" src="/uploads/images/{{ imagediapo.image }}" class="d-block w-75 img img-fluid ">  
                         </div> 
                         {% set isFirst = false %}
                 {% endfor %}
