--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -35,7 +35,7 @@
         #}
 
         <button class="btn btn-sm btn-info mt-3" type="submit">
-            Sign in
+            Se connecter
         </button>
     </form>
 </div>
