--- a/public/assets/css/base.css
+++ b/public/assets/css/base.css
@@ -79,3 +79,8 @@ nav .active {
   font-weight: 900;
   animation: slide-in-left 1s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
 }
+
+.foot {
+  font-size: 2px;
+}
+
