--- a/public/assets/css/media.css
+++ b/public/assets/css/media.css
@@ -30,10 +30,32 @@
     height: 1000px ;
   }
 
-}
-@media screen and (max-width: 370px) {
+
+*/
+@media screen and (max-width: 376px) {
   .banier {
     height: 1500px ;
   }
 
-} */
+  .titre {
+    font-size: 30px;
+    margin-bottom: 80px;
+  }
+
+  .bouton {
+    font-size: 5px;
+  }
+
+  .carroussel img {
+    height: 200px
+  }
+
+  .titre-contact {
+    font-size: 15px;
+  }
+
+  .titre-association {
+    font-size: 20px;
+  }
+
+} 
