--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,7 +3,12 @@
     <head>
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+
+
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+
+        
         <!-- Font google-->
         <link rel="preconnect" href="https://fonts.gstatic.com" />
         <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet"/>
@@ -29,12 +34,9 @@
         />
         <!--Style de base-->
          <link href="{{ asset('assets/css/base.css') }}" rel="stylesheet">
-        <!--Style de home-->
-         <link href="{{ asset('assets/css/home.css') }}" rel="stylesheet">
+       
         <!--Style de animations-->
          <link href="{{ asset('assets/css/animations.css') }}" rel="stylesheet">
-        <!--Style de media query-->
-         <link href="{{ asset('assets/css/media.css') }}" rel="stylesheet">
         <!--Style carousel-->
          <link href="{{ asset('assets/css/carousel.css') }}" rel="stylesheet">
         <!--Style actualites-->
@@ -47,6 +49,10 @@
          <link href="{{ asset('assets/css/contact.css') }}" rel="stylesheet">
         <!--Style parents-->
          <link href="{{ asset('assets/css/parentsDelegues.css') }}" rel="stylesheet">
+          <!--Style de home-->
+         <link href="{{ asset('assets/css/home.css') }}" rel="stylesheet">
+        <!--Style de media query-->
+         <link href="{{ asset('assets/css/media.css') }}" rel="stylesheet">
 
         <title>{% block title %}APE SPDL{% endblock%}</title>
 
@@ -104,11 +110,7 @@
                                         href="{{ path('contact') }}"
                                         >Contact</a>
                                     </li>
-                                    <li class="nav-item me-5">
-                                        <a class="nav-link " aria-current="page" 
-                                        href="{{ path('admin')}}"
-                                        > <i class="bi bi-lock"></i></a>
-                                    </li>
+                        
                                 </ul>
                             </div>
                         </div>
@@ -119,8 +121,11 @@
                 {% block content %}
                 {% endblock %}
             </div>
-            <footer class="container-fluid d-flex justify-content-evenly pt-3 bg-light fixed-bottom">
+            <footer class="container-fluid text-center pt-3 bg-light fixed-bottom">
                 <p>Copyright © APE Saint-Pierre-de-Lages</p>
+                <a href="" > Mentions légales</a>
+                 / 
+                <a href="{{ path('admin')}}" > Accès interne</a>
             </footer>
         </div>
     </body>
