--- a/templates/documents/index.html.twig
+++ b/templates/documents/index.html.twig
@@ -68,15 +68,10 @@
             </div>
         </div>
     </section>
-    <section class="contact d-flex justify-content-center align-items-center text-white ">
-        <div class="row d-flex justify-content-between align-items-center text-white w-100 px-5">
-            <div class="col-lg-6 justify-content-center">
-            <h3 class="text-center fs-md-5">Contactez nous</h3>
-            </div>
-            <div class="col-lg-6 d-flex justify-content-center">
-            <a href="{{ path('contact') }}" >Contact</a>
-            </div>
-        </div>
+    <section class="contact text-center text-white pt-4 ">
+   
+            <a href="{{ path('contact') }}" class='btn btn-lg'>Contact</a>
+   
     </section>
 </main>
 
