--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -15,13 +15,18 @@
 
         <h1 class="h3 mb-3 font-weight-normal">Merci de vous connecter</h1>
         <label for="inputEmail">Votre email</label>
+         <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
         <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus placeholder ="Votre adresse mail">
         <label for="inputPassword">Votre mot de passe</label>
         <input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required placeholder ="Votre mot de passe">
 
-        <input type="hidden" name="_csrf_token"
-            value="{{ csrf_token('authenticate') }}"
-        >
+        <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
+        <button class="btn btn-sm btn-info mt-3" type="submit">
+            Se connecter
+        </button>
+    </form>
+</div>
+{% endblock %}
 
         {#
             Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
@@ -33,10 +38,3 @@
                 </label>
             </div>
         #}
-
-        <button class="btn btn-sm btn-info mt-3" type="submit">
-            Se connecter
-        </button>
-    </form>
-</div>
-{% endblock %}
