--- a/public/assets/css/base.css
+++ b/public/assets/css/base.css
@@ -84,3 +84,25 @@ nav .active {
   font-size: 2px;
 }
 
+.dark {
+  background-color: #1d2424;
+  color: white;
+}
+
+/* 
+.btn-toggle {
+  position: absolute;
+  right: 15px;
+  left: 100px;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  background-color: #fff;
+  border: 1px solid #333;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+
+} */
+
