--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -23,7 +23,6 @@
                 href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css"
         />
         <link rel="shortcut icon" href="{{ asset('assets/images/logo.png')}}" type="image/x-icon" />
-        <link rel="stylesheet" href="style.css" />
 
         <!--Bootstrap-->
         <link
@@ -57,14 +56,17 @@
         <title>{% block title %}APE SPDL{% endblock%}</title>
 
     </head>
-    <body>
+    <body >
         <div class="container-fluid p-0 m-0">
             <header class="">
                 <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top ">
                     <div class="container-fluid">
+                    <div class="btn dark-btn "  name="theme"><i class='bi bi-moon-fill'></i> </div>
                         <a href="#">
                             <img class="img img-fluid w-75 ps-3" src="{{ asset('assets/images/logo.png')}}" alt="logo">
                         </a>
+
+
                         <button
                                 class="navbar-toggler"
                                 type="button"
@@ -77,7 +79,7 @@
                             <span class="navbar-toggler-icon"></span>
                         </button>
 
-                        <div class="collapse navbar-collapse lg-d-flex bg-light justify-content-end" id="navbarSupportedContent">
+                        <div class="collapse navbar-collapse lg-d-flex  justify-content-end" id="navbarSupportedContent">
                             <div>
                                 <ul class="navbar-nav me-auto mb-2 mb-lg-0  ">
                                     <li class="nav-item me-5">
@@ -136,5 +138,5 @@
             crossorigin="anonymous"
     ></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <script src="app.js"></script>
-</html>
+    <script src="{{ asset('assets/js/app.js') }}"></script>
+ </html>
