--- a/templates/register/index.html.twig
+++ b/templates/register/index.html.twig
@@ -4,12 +4,12 @@
 {% form_theme form 'bootstrap_5_layout.html.twig' %}
 
 {% block content %}
-    <div class="d-flex justify-content-center ">
+    {# <div class="d-flex justify-content-center ">
         <div class="m-5 pt-5 w-50 h-100">
             <h1 class="mt-5 pt-5"> Inscription</h1>
 
             {{ form(form) }}
 
         </div>
-    </div>
+    </div> #}
 {% endblock %}
